--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0"
   },
