--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
