--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "@react-pdf/renderer": "^3.1.9",
+    "@smastrom/react-rating": "^1.3.1",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
